--- a/package.json
+++ b/package.json
@@ -14,16 +14,41 @@
     "node-sass": "^4.13.1",
     "react-redux": "^7.2.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "eslint": "6.8.0",
+    "eslint-cli": "1.1.1",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-config-base": "1.0.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-eslint-plugin": "2.2.1",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jest": "23.6.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-react": "7.18.3",
+    "husky": "4.2.1",
+    "prettier": "1.19.1",
+    "pretty-quick": "2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|scss|md)\"",
+    "lint": "eslint \"./src/**/*.{js,jsx}\""
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier && npm run lint"
+    }
   },
   "browserslist": {
     "production": [
