--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.1",
+    "prop-types": "15.7.2",
     "react-redux": "^7.2.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
