--- a/package.json
+++ b/package.json
@@ -3,19 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "node-sass": "^4.13.1",
-    "prop-types": "15.7.2",
-    "react-redux": "^7.2.0",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
     "eslint": "6.8.0",
     "eslint-cli": "1.1.1",
     "eslint-config-airbnb": "18.0.1",
@@ -29,8 +22,16 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.3",
     "husky": "4.2.1",
+    "node-sass": "^4.13.1",
     "prettier": "1.19.1",
-    "pretty-quick": "2.0.1"
+    "pretty-quick": "2.0.1",
+    "prop-types": "15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
