--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.3",
     "husky": "4.2.1",
+    "loaders.css": "^0.1.2",
     "node-sass": "^4.13.1",
     "prettier": "1.19.1",
     "pretty-quick": "2.0.1",
     "prop-types": "15.7.2",
+    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loaders": "^3.0.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux-logger": "^3.0.6",
